--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <div class="card__join">
       <h2 class="card__title">Join our community</h2>
       <h3 class="card__secundary">30-day, hassle-free money back guarantee</h3>
-      <p class="card__content">Gain access to our full library of tutorials alang with expert code reviews. Perfect for any developers who are serious about honing their skills.</p>
+      <p class="card__content">Gain access to our full library of tutorials alang with expert code reviews. <br/> Perfect for any developers who are serious about honing their skills.</p>
     </div>
     <div class="card__subscribe">
       <h1 class="card__subscribe--title">Monthly Subscription</h1>
-      <p class="card__subscribe--price">$29 <span class="card__subscribe--light">per month</span></p>
+        <p class="card__subscribe--price">$29 <span class="card__subscribe--light">per month</span></p>
       <p class="card__subscribe--description">Full access for less than $1 a day</p>
       <button class="card__subscribe--btn">Sign Up</button>
     </div>
